Stop using terminally deprecated sun.misc.Unsafe memory-access methods
Newer JDKs warn on Unsafe.staticFieldOffset/staticFieldBase/putX
(JEP 471) and will disallow them by default.

In the test JVM, strip the final modifier from static fields of
android.os.Build and its nested classes at class load time so
setStaticValue can use plain reflection. The Gradle plugin passes the
paparazzi jar to test JVMs via -javaagent, letting the dependency-free
PaparazziAgent premain transform Build before any test code (Robolectric
runners, test-class companions, coroutines Main dispatcher init) can
load it; agent-attach registration at Paparazzi construction and
setup() remains as a fallback for other launchers. Also drop the
deprecated-for-removal AccessController.doPrivileged.

A failed one-time initialization is now memoized so later tests in the
same process report the root cause instead of a lateinit error.

In the Gradle plugin, mutate SimpleHtmlWriter.VALID_HTML_TAGS in place
(reaching through the unmodifiableSet wrapper on Gradle 9+) instead of
replacing the static final field.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>